Fixed bug #7396: Selectboxes with long entries are cut off in dialogs in IE7.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.IE7.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.IE7.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.1.2.1 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * @css-for     IE7
@@ -15,6 +15,15 @@
 
 .W100pc {
     width: 98%;
+}
+
+/**
+ * @subsection  Forms in Dialogs
+ * @note        Fix for overflowing selectboxes with long entries
+ */
+
+.Dialog #SearchForm {
+    overflow: auto;
 }
 
 } /* end @media */
